--- a/public/admin-users.html
+++ b/public/admin-users.html
@@ -18,7 +18,11 @@
       --text-gray: #ccc;
     }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
     body, html {
       font-family: 'Segoe UI', system-ui, sans-serif;
@@ -43,57 +47,154 @@
       z-index: 1000;
       border-bottom: 1px solid rgba(79, 70, 229, 0.3);
     }
-    header h1 { font-size: 24px; color: var(--accent); font-weight: 800; }
+    header h1 {
+      font-size: 24px;
+      color: var(--accent);
+      font-weight: 800;
+    }
 
-    .search-container { position: relative; width: 300px; }
+    .search-container {
+      position: relative;
+      width: 300px;
+    }
+
     #searchInput {
       width: 100%;
       padding: 10px 15px 10px 40px;
       border-radius: 50px;
       border: none;
-      background: rgba(0,0,0,0.4);
+      background: rgba(0, 0, 0, 0.4);
       color: white;
       outline: none;
     }
-    .search-icon { position: absolute; left: 15px; top: 50%; transform: translateY(-50%); color: var(--text-gray); }
 
-    main { margin-top: 90px; padding: 20px; max-width: 1200px; margin-left:auto; margin-right:auto; }
+    .search-icon {
+      position: absolute;
+      left: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: var(--text-gray);
+    }
 
-    .stats-bar { display: flex; gap: 20px; margin-bottom: 25px; flex-wrap: wrap; }
+    main {
+      margin-top: 90px;
+      padding: 20px;
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .stats-bar {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 25px;
+      flex-wrap: wrap;
+    }
+
     .stat-card {
       background: var(--card-bg);
       padding: 15px 25px;
       border-radius: 15px;
       display: flex;
-      flex-direction: column;
-      min-width: 180px;
+      flex-direction: column;      min-width: 180px;
     }
-    .stat-value { font-size: 1.8rem; font-weight: bold; color: var(--accent); }
-    .stat-label { color: var(--text-gray); font-size: 0.95rem; }
 
-    #usersTable { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    #usersTable th, #usersTable td { padding: 16px; text-align: left; border-bottom: 1px solid rgba(255,255,255,0.08); }
-    #usersTable th { color: var(--accent); font-size: 1.1rem; }
-
-    .user-row { transition: all 0.2s ease; }
-    .user-row:hover { background: rgba(79, 70, 229, 0.1); }
-
-    .editable { background: rgba(255,255,255,0.08); padding: 6px 10px; border-radius: 6px; cursor: pointer; }
-    .editable:hover { background: rgba(250, 204, 21, 0.15); }
-
-    .action-btn { padding: 8px 15px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; transition: all 0.2s ease; display: inline-flex; align-items:center; gap:6px; }
-    .edit-btn { background: rgba(16,185,129,0.2); color: var(--success); }
-    .delete-btn { background: rgba(239,68,68,0.2); color: var(--danger); }
-    .edit-btn:hover { background: rgba(16,185,129,0.3); }
-    .delete-btn:hover { background: rgba(239,68,68,0.3); }
-
-    .no-results { text-align:center; padding:40px; color: var(--text-gray); font-style: italic; }
-
-    @media (max-width:768px) {
-      .search-container { width: 200px; }
-      .stats-bar { justify-content:center; }
-      #usersTable th, #usersTable td { padding: 12px 8px; font-size:0.95rem; }
+    .stat-value {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: var(--accent);
     }
+
+    .stat-label {
+      color: var(--text-gray);
+      font-size: 0.95rem;
+    }
+
+    #usersTable {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    #usersTable th,
+    #usersTable td {
+      padding: 16px;
+      text-align: left;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    }
+
+    #usersTable th {
+      color: var(--accent);
+      font-size: 1.1rem;
+    }
+
+    .user-row {
+      transition: all 0.2s ease;
+    }
+
+    .user-row:hover {
+      background: rgba(79, 70, 229, 0.1);
+    }
+
+    .editable {
+      background: rgba(255, 255, 255, 0.08);
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .editable:hover {
+      background: rgba(250, 204, 21, 0.15);
+    }
+    .action-btn {
+      padding: 8px 15px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .edit-btn {
+      background: rgba(16, 185, 129, 0.2);
+      color: var(--success);
+    }
+
+    .delete-btn {
+      background: rgba(239, 68, 68, 0.2);
+      color: var(--danger);
+    }
+
+    .edit-btn:hover {
+      background: rgba(16, 185, 129, 0.3);
+    }
+
+    .delete-btn:hover {
+      background: rgba(239, 68, 68, 0.3);
+    }
+
+    .no-results {
+      text-align: center;
+      padding: 40px;
+      color: var(--text-gray);
+      font-style: italic;
+    }
+
+    @media (max-width: 768px) {
+      .search-container {
+        width: 200px;
+      }
+      .stats-bar {
+        justify-content: center;
+      }
+      #usersTable th,
+      #usersTable td {
+        padding: 12px 8px;
+        font-size: 0.95rem;
+      }    }
   </style>
 </head>
 <body>
@@ -135,123 +236,140 @@
 </main>
 
 <script>
-let allUsers = [];
+  let allUsers = [];
 
-// جلب المستخدمين من السيرفر
-async function fetchUsers() {
-  try {
-    const res = await fetch('/api/admin/users');
-    if (!res.ok) throw new Error('Failed to fetch users');
-    const data = await res.json();
-    allUsers = Array.isArray(data.users) ? data.users : [];
-    renderUsers(allUsers);
-    updateStats(allUsers);
-  } catch (err) {
-    console.error('Error:', err);
-    document.getElementById('usersBody').innerHTML = `<tr><td colspan="5" class="no-results">❌ Failed to load users</td></tr>`;
-    document.getElementById('totalUsers').textContent = '0';
-    document.getElementById('totalCoins').textContent = '0';
-  }
-}
-
-// عرض المستخدمين
-function renderUsers(users) {
-  const tbody = document.getElementById('usersBody');
-  if (!users.length) {
-    tbody.innerHTML = `<tr><td colspan="5" class="no-results">No users found</td></tr>`;
-    return;
+  // جلب المستخدمين من السيرفر
+  async function fetchUsers() {
+    try {
+      const res = await fetch('/api/admin/users');
+      if (!res.ok) throw new Error('Failed to fetch users');
+      const data = await res.json();      allUsers = data.users || [];
+      renderUsers(allUsers);
+      updateStats(allUsers);
+    } catch (err) {
+      console.error('Error:', err);
+      document.getElementById('usersBody').innerHTML = `<tr><td colspan="5" class="no-results">❌ Failed to load users</td></tr>`;
+    }
   }
 
-  tbody.innerHTML = users.map(user => `
-    <tr class="user-row">
-      <td>${user.id}</td>
-      <td>${user.username}</td>
-      <td>
-        <span class="editable" onclick="editCoins('${user.id}', this)">${user.coins ?? 0}</span>
-      </td>
-      <td>${user.createdAt ? new Date(user.createdAt).toLocaleDateString() : '—'}</td>
-      <td>
-        <button class="action-btn edit-btn" onclick="editPassword('${user.id}')">
-          <i class="fas fa-key"></i> Password
-        </button>
-        <button class="action-btn delete-btn" onclick="deleteUser('${user.id}')">
-          <i class="fas fa-trash"></i> Delete
-        </button>
-      </td>
-    </tr>
-  `).join('');
-}
+  // عرض المستخدمين
+  function renderUsers(users) {
+    const tbody = document.getElementById('usersBody');
+    if (users.length === 0) {
+      tbody.innerHTML = `<tr><td colspan="5" class="no-results">No users found</td></tr>`;
+      return;
+    }
 
-// تحديث الإحصائيات
-function updateStats(users) {
-  document.getElementById('totalUsers').textContent = users.length;
-  const totalCoins = users.reduce((sum, u) => sum + (u.coins || 0), 0);
-  document.getElementById('totalCoins').textContent = totalCoins.toLocaleString();
-}
+    tbody.innerHTML = users.map(user => `
+      <tr class="user-row">
+        <td>${user.id}</td>
+        <td>${user.username}</td>
+        <td>
+          <span class="editable" onclick="editCoins(${user.id}, this)">
+            ${user.coins}
+          </span>
+        </td>
+        <td>${new Date(user.createdAt).toLocaleDateString()}</td>
+        <td>
+          <button class="action-btn edit-btn" onclick="editPassword(${user.id})">
+            <i class="fas fa-key"></i> Password
+          </button>
+          <button class="action-btn delete-btn" onclick="deleteUser(${user.id})">
+            <i class="fas fa-trash"></i> Delete
+          </button>
+        </td>
+      </tr>
+    `).join('');
+  }
 
-// البحث الفوري
-document.getElementById('searchInput').addEventListener('input', (e) => {
-  const term = e.target.value.toLowerCase();
-  const filtered = allUsers.filter(u => 
-    u.username.toLowerCase().includes(term) || String(u.id).includes(term)
-  );
-  renderUsers(filtered);
-});
+  // تحديث الإحصائيات
+  function updateStats(users) {
+    document.getElementById('totalUsers').textContent = users.length;
+    const totalCoins = users.reduce((sum, u) => sum + (u.coins || 0), 0);
+    document.getElementById('totalCoins').textContent = totalCoins.toLocaleString();
+  }
 
-// تعديل الكوينز
-async function editCoins(userId, element) {
-  const current = parseInt(element.textContent);
-  const newCoins = prompt(`Enter new coins for user ID ${userId}:`, current);
-  if (newCoins === null) return;
-  if (isNaN(newCoins) || newCoins < 0) { alert('Please enter a valid number!'); return; }
+  // البحث الفوري
+  document.getElementById('searchInput').addEventListener('input', (e) => {
+    const term = e.target.value.toLowerCase();
+    const filtered = allUsers.filter(user =>      user.username.toLowerCase().includes(term) ||
+      String(user.id).includes(term)
+    );
+    renderUsers(filtered);
+  });
 
-  try {
-    const res = await fetch('/api/admin/update-coins', {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ id: userId, coins: parseInt(newCoins) })
-    });
-    const data = await res.json();
-    if (data.success) fetchUsers();
-    else alert(data.error || 'Failed to update coins');
-  } catch (err) { alert('Error updating coins'); }
-}
+  // تعديل الكوينز
+  async function editCoins(userId, element) {
+    const current = parseInt(element.textContent);
+    const newCoins = prompt(`Enter new coins for user ID ${userId}:`, current);
+    if (newCoins === null) return;
+    if (isNaN(newCoins) || newCoins < 0) {
+      alert('Please enter a valid number!');
+      return;
+    }
 
-// تعديل كلمة المرور
-async function editPassword(userId) {
-  const newPassword = prompt(`Enter new password for user ID ${userId}:`);
-  if (!newPassword || newPassword.length < 3) { alert('Password must be at least 3 characters!'); return; }
+    try {
+      const res = await fetch('/api/admin/update-coins', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId, coins: parseInt(newCoins) })
+      });
+      if (res.ok) {
+        element.textContent = newCoins;
+        fetchUsers(); // تحديث القائمة والإحصائيات
+      } else {
+        alert('Failed to update coins');
+      }
+    } catch (err) {
+      alert('Error updating coins');
+    }
+  }
 
-  try {
-    const res = await fetch('/api/admin/update-password', {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ id: userId, password: newPassword })
-    });
-    const data = await res.json();
-    if (data.success) alert('Password updated successfully!');
-    else alert(data.error || 'Failed to update password');
-  } catch (err) { alert('Error updating password'); }
-}
+  // تعديل كلمة المرور
+  async function editPassword(userId) {
+    const newPassword = prompt(`Enter new password for user ID ${userId}:`);
+    if (!newPassword || newPassword.length < 3) {
+      alert('Password must be at least 3 characters!');
+      return;
+    }
 
-// حذف مستخدم
-async function deleteUser(userId) {
-  if (!confirm(`Are you sure you want to delete user ID ${userId}? This cannot be undone.`)) return;
+    try {
+      const res = await fetch('/api/admin/update-password', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId, password: newPassword })
+      });
+      if (res.ok) {
+        alert('Password updated successfully!');
+      } else {        alert('Failed to update password');
+      }
+    } catch (err) {
+      alert('Error updating password');
+    }
+  }
 
-  try {
-    const res = await fetch('/api/admin/delete-user', {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ id: userId })
-    });
-    const data = await res.json();
-    if (data.success) fetchUsers();
-    else alert(data.error || 'Failed to delete user');
-  } catch (err) { alert('Error deleting user'); }
-}
+  // حذف مستخدم
+  async function deleteUser(userId) {
+    if (!confirm(`Are you sure you want to delete user ID ${userId}? This cannot be undone.`)) return;
 
-// تشغيل عند التحميل
-document.addEventListener('DOMContentLoaded', fetchUsers);
+    try {
+      const res = await fetch('/api/admin/delete-user', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId })
+      });
+      if (res.ok) {
+        fetchUsers(); // إعادة التحميل
+      } else {
+        alert('Failed to delete user');
+      }
+    } catch (err) {
+      alert('Error deleting user');
+    }
+  }
+
+  // تشغيل عند التحميل
+  document.addEventListener('DOMContentLoaded', fetchUsers);
 </script>
 
 </body>
