--- a/public/admin-users.html
+++ b/public/admin-users.html
@@ -1,42 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Admin Panel - BelvoHost</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-<style>
-  :root{
-    --primary:#4f46e5; --accent:#facc15; --success:#10b981; --danger:#ef4444;
-    --dark-bg:rgba(10,10,20,0.92); --card-bg:rgba(20,20,40,0.7); --text-light:#f0f0ff; --text-gray:#ccc;
-  }
-  *{box-sizing:border-box;margin:0;padding:0;}
-  body{font-family:'Segoe UI',sans-serif;min-height:100%;background:#111;color:var(--text-light);}
-  header{position:fixed;top:0;width:100%;background:var(--dark-bg);backdrop-filter:blur(10px);display:flex;justify-content:space-between;align-items:center;padding:16px 30px;z-index:1000;border-bottom:1px solid rgba(79,70,229,0.3);}
-  header h1{color:var(--accent);}
-  .search-container{position:relative;width:300px;}
-  #searchInput{width:100%;padding:10px 15px 10px 40px;border-radius:50px;border:none;background:rgba(0,0,0,0.4);color:white;outline:none;}
-  .search-icon{position:absolute;left:15px;top:50%;transform:translateY(-50%);color:var(--text-gray);}
-  main{margin-top:90px;padding:20px;max-width:1200px;margin:auto;}
-  .stats-bar{display:flex;gap:20px;margin-bottom:25px;flex-wrap:wrap;}
-  .stat-card{background:var(--card-bg);padding:15px 25px;border-radius:15px;display:flex;flex-direction:column;min-width:180px;}
-  .stat-value{font-size:1.8rem;font-weight:bold;color:var(--accent);}
-  .stat-label{color:var(--text-gray);}
-  #usersTable{width:100%;border-collapse:collapse;margin-top:20px;}
-  #usersTable th, #usersTable td{padding:16px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.08);}
-  #usersTable th{color:var(--accent);}
-  .user-row:hover{background:rgba(79,70,229,0.1);}
-  .editable{background:rgba(255,255,255,0.08);padding:6px 10px;border-radius:6px;cursor:pointer;}
-  .editable:hover{background:rgba(250,204,21,0.15);}
-  .action-btn{padding:8px 15px;border:none;border-radius:8px;font-weight:bold;cursor:pointer;display:inline-flex;align-items:center;gap:6px;}
-  .edit-btn{background:rgba(16,185,129,0.2);color:var(--success);}
-  .delete-btn{background:rgba(239,68,68,0.2);color:var(--danger);}
-  .edit-btn:hover{background:rgba(16,185,129,0.3);}
-  .delete-btn:hover{background:rgba(239,68,68,0.3);}
-  .no-results{text-align:center;padding:40px;color:var(--text-gray);font-style:italic;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Panel - BelvoHost</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <style>
+    :root {
+      --primary: #4f46e5;
+      --primary-light: #6366f1;
+      --accent: #facc15;
+      --danger: #ef4444;
+      --success: #10b981;
+      --dark-bg: rgba(10, 10, 20, 0.92);
+      --card-bg: rgba(20, 20, 40, 0.7);
+      --text-light: #f0f0ff;
+      --text-gray: #ccc;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body, html {
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      min-height: 100%;
+      color: var(--text-light);
+      background: url('https://i.ibb.co/RGGqgXRv/file-00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
+      background-size: cover;
+      scroll-behavior: smooth;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: var(--dark-bg);
+      backdrop-filter: blur(10px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 30px;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(79, 70, 229, 0.3);
+    }
+    header h1 {
+      font-size: 24px;
+      color: var(--accent);
+      font-weight: 800;
+    }
+
+    .search-container {
+      position: relative;
+      width: 300px;
+    }
+
+    #searchInput {
+      width: 100%;
+      padding: 10px 15px 10px 40px;
+      border-radius: 50px;
+      border: none;
+      background: rgba(0, 0, 0, 0.4);
+      color: white;
+      outline: none;
+    }
+
+    .search-icon {
+      position: absolute;
+      left: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: var(--text-gray);
+    }
+
+    main {
+      margin-top: 90px;
+      padding: 20px;
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .stats-bar {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 25px;
+      flex-wrap: wrap;
+    }
+
+    .stat-card {
+      background: var(--card-bg);
+      padding: 15px 25px;
+      border-radius: 15px;
+      display: flex;
+      flex-direction: column;      min-width: 180px;
+    }
+
+    .stat-value {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: var(--accent);
+    }
+
+    .stat-label {
+      color: var(--text-gray);
+      font-size: 0.95rem;
+    }
+
+    #usersTable {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    #usersTable th,
+    #usersTable td {
+      padding: 16px;
+      text-align: left;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    }
+
+    #usersTable th {
+      color: var(--accent);
+      font-size: 1.1rem;
+    }
+
+    .user-row {
+      transition: all 0.2s ease;
+    }
+
+    .user-row:hover {
+      background: rgba(79, 70, 229, 0.1);
+    }
+
+    .editable {
+      background: rgba(255, 255, 255, 0.08);
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .editable:hover {
+      background: rgba(250, 204, 21, 0.15);
+    }
+    .action-btn {
+      padding: 8px 15px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .edit-btn {
+      background: rgba(16, 185, 129, 0.2);
+      color: var(--success);
+    }
+
+    .delete-btn {
+      background: rgba(239, 68, 68, 0.2);
+      color: var(--danger);
+    }
+
+    .edit-btn:hover {
+      background: rgba(16, 185, 129, 0.3);
+    }
+
+    .delete-btn:hover {
+      background: rgba(239, 68, 68, 0.3);
+    }
+
+    .no-results {
+      text-align: center;
+      padding: 40px;
+      color: var(--text-gray);
+      font-style: italic;
+    }
+
+    @media (max-width: 768px) {
+      .search-container {
+        width: 200px;
+      }
+      .stats-bar {
+        justify-content: center;
+      }
+      #usersTable th,
+      #usersTable td {
+        padding: 12px 8px;
+        font-size: 0.95rem;
+      }    }
+  </style>
 </head>
 <body>
+
 <header>
   <h1><i class="fas fa-user-shield"></i> Admin Panel</h1>
   <div class="search-container">
@@ -44,84 +206,171 @@
     <input type="text" id="searchInput" placeholder="Search by name or ID..." />
   </div>
 </header>
+
 <main>
   <div class="stats-bar">
-    <div class="stat-card"><div class="stat-value" id="totalUsers">—</div><div class="stat-label">Total Users</div></div>
-    <div class="stat-card"><div class="stat-value" id="totalCoins">—</div><div class="stat-label">Total Coins</div></div>
+    <div class="stat-card">
+      <div class="stat-value" id="totalUsers">—</div>
+      <div class="stat-label">Total Users</div>
+    </div>
+    <div class="stat-card">
+      <div class="stat-value" id="totalCoins">—</div>
+      <div class="stat-label">Total Coins</div>
+    </div>
   </div>
+
   <table id="usersTable">
     <thead>
-      <tr><th>ID</th><th>Username</th><th>Coins</th><th>Created At</th><th>Actions</th></tr>
+      <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Coins</th>
+        <th>Created At</th>
+        <th>Actions</th>
+      </tr>
     </thead>
-    <tbody id="usersBody"><tr><td colspan="5" class="no-results">Loading users...</td></tr></tbody>
+    <tbody id="usersBody">
+      <!-- سيتم ملؤه بواسطة JavaScript -->
+    </tbody>
   </table>
 </main>
+
 <script>
-let allUsers = [];
+  let allUsers = [];
 
-async function fetchUsers() {
-  try {
-    const res = await fetch('/api/admin/users');
-    const data = await res.json();
-    allUsers = data.users || [];
-    renderUsers(allUsers);
-    updateStats(allUsers);
-  } catch(err) {
-    console.error(err);
-    document.getElementById('usersBody').innerHTML = `<tr><td colspan="5" class="no-results">❌ Failed to load users</td></tr>`;
+  // جلب المستخدمين من السيرفر
+  async function fetchUsers() {
+    try {
+      const res = await fetch('/api/admin/users');
+      if (!res.ok) throw new Error('Failed to fetch users');
+      const data = await res.json();      allUsers = data.users || [];
+      renderUsers(allUsers);
+      updateStats(allUsers);
+    } catch (err) {
+      console.error('Error:', err);
+      document.getElementById('usersBody').innerHTML = `<tr><td colspan="5" class="no-results">❌ Failed to load users</td></tr>`;
+    }
   }
-}
 
-function renderUsers(users) {
-  const tbody = document.getElementById('usersBody');
-  if(users.length===0){tbody.innerHTML=`<tr><td colspan="5" class="no-results">No users found</td></tr>`;return;}
-  tbody.innerHTML = users.map(u=>`
-    <tr class="user-row">
-      <td>${u.id}</td>
-      <td>${u.username}</td>
-      <td><span class="editable" onclick="editCoins(${u.id}, this)">${u.coins}</span></td>
-      <td>${new Date(u.createdAt||Date.now()).toLocaleDateString()}</td>
-      <td>
-        <button class="action-btn edit-btn" onclick="editPassword(${u.id})"><i class="fas fa-key"></i> Password</button>
-        <button class="action-btn delete-btn" onclick="deleteUser(${u.id})"><i class="fas fa-trash"></i> Delete</button>
-      </td>
-    </tr>`).join('');
-}
+  // عرض المستخدمين
+  function renderUsers(users) {
+    const tbody = document.getElementById('usersBody');
+    if (users.length === 0) {
+      tbody.innerHTML = `<tr><td colspan="5" class="no-results">No users found</td></tr>`;
+      return;
+    }
 
-function updateStats(users){
-  document.getElementById('totalUsers').textContent = users.length;
-  const totalCoins = users.reduce((sum,u)=>sum+(u.coins||0),0);
-  document.getElementById('totalCoins').textContent = totalCoins.toLocaleString();
-}
+    tbody.innerHTML = users.map(user => `
+      <tr class="user-row">
+        <td>${user.id}</td>
+        <td>${user.username}</td>
+        <td>
+          <span class="editable" onclick="editCoins(${user.id}, this)">
+            ${user.coins}
+          </span>
+        </td>
+        <td>${new Date(user.createdAt).toLocaleDateString()}</td>
+        <td>
+          <button class="action-btn edit-btn" onclick="editPassword(${user.id})">
+            <i class="fas fa-key"></i> Password
+          </button>
+          <button class="action-btn delete-btn" onclick="deleteUser(${user.id})">
+            <i class="fas fa-trash"></i> Delete
+          </button>
+        </td>
+      </tr>
+    `).join('');
+  }
 
-document.getElementById('searchInput').addEventListener('input', e=>{
-  const term=e.target.value.toLowerCase();
-  renderUsers(allUsers.filter(u=>u.username.toLowerCase().includes(term)||String(u.id).includes(term)));
-});
+  // تحديث الإحصائيات
+  function updateStats(users) {
+    document.getElementById('totalUsers').textContent = users.length;
+    const totalCoins = users.reduce((sum, u) => sum + (u.coins || 0), 0);
+    document.getElementById('totalCoins').textContent = totalCoins.toLocaleString();
+  }
 
-async function editCoins(id, el){
-  const current=parseInt(el.textContent);
-  const newCoins=prompt(`Enter new coins for ID ${id}:`,current);
-  if(newCoins===null||isNaN(newCoins)||newCoins<0) return alert('Invalid number!');
-  const res=await fetch('/api/admin/update-coins',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({id,coins:parseInt(newCoins)})});
-  if(res.ok){el.textContent=newCoins; fetchUsers();}
-  else alert('Failed to update coins');
-}
+  // البحث الفوري
+  document.getElementById('searchInput').addEventListener('input', (e) => {
+    const term = e.target.value.toLowerCase();
+    const filtered = allUsers.filter(user =>      user.username.toLowerCase().includes(term) ||
+      String(user.id).includes(term)
+    );
+    renderUsers(filtered);
+  });
 
-async function editPassword(id){
-  const newPassword=prompt(`Enter new password for ID ${id}:`);
-  if(!newPassword||newPassword.length<3) return alert('Password too short!');
-  const res=await fetch('/api/admin/update-password',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({id,password:newPassword})});
-  if(res.ok) alert('Password updated'); else alert('Failed');
-}
+  // تعديل الكوينز
+  async function editCoins(userId, element) {
+    const current = parseInt(element.textContent);
+    const newCoins = prompt(`Enter new coins for user ID ${userId}:`, current);
+    if (newCoins === null) return;
+    if (isNaN(newCoins) || newCoins < 0) {
+      alert('Please enter a valid number!');
+      return;
+    }
 
-async function deleteUser(id){
-  if(!confirm(`Delete user ID ${id}?`)) return;
-  const res=await fetch('/api/admin/delete-user',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({id})});
-  if(res.ok) fetchUsers(); else alert('Failed to delete');
-}
+    try {
+      const res = await fetch('/api/admin/update-coins', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId, coins: parseInt(newCoins) })
+      });
+      if (res.ok) {
+        element.textContent = newCoins;
+        fetchUsers(); // تحديث القائمة والإحصائيات
+      } else {
+        alert('Failed to update coins');
+      }
+    } catch (err) {
+      alert('Error updating coins');
+    }
+  }
 
-document.addEventListener('DOMContentLoaded',fetchUsers);
+  // تعديل كلمة المرور
+  async function editPassword(userId) {
+    const newPassword = prompt(`Enter new password for user ID ${userId}:`);
+    if (!newPassword || newPassword.length < 3) {
+      alert('Password must be at least 3 characters!');
+      return;
+    }
+
+    try {
+      const res = await fetch('/api/admin/update-password', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId, password: newPassword })
+      });
+      if (res.ok) {
+        alert('Password updated successfully!');
+      } else {        alert('Failed to update password');
+      }
+    } catch (err) {
+      alert('Error updating password');
+    }
+  }
+
+  // حذف مستخدم
+  async function deleteUser(userId) {
+    if (!confirm(`Are you sure you want to delete user ID ${userId}? This cannot be undone.`)) return;
+
+    try {
+      const res = await fetch('/api/admin/delete-user', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id: userId })
+      });
+      if (res.ok) {
+        fetchUsers(); // إعادة التحميل
+      } else {
+        alert('Failed to delete user');
+      }
+    } catch (err) {
+      alert('Error deleting user');
+    }
+  }
+
+  // تشغيل عند التحميل
+  document.addEventListener('DOMContentLoaded', fetchUsers);
 </script>
+
 </body>
 </html>
